# WinKoGNN

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CMakeLists_unified.txt  DOCUMENTATION_GUIDE.md  FORMAL_SPECIFICATION.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  UNIFIED_ARCHITECTURE.md  config.json  demo.py  include_analysis.json  requirements.txt  setup.py  test_installation.py
.github/workflows/: agios-unified.yml  cmake-win-platform.yml  msvc.yml
cog0/: README.md
examples/: __init__.py  basic_usage.py
include/cogpy/: atenspace_bridge.hpp  cog0_capi.h  cog0_orchestrator.hpp  cogpy_bridge.hpp  nt_autognosis.hpp  nt_cognitive_kernel.hpp  p9_aifs_bridge.hpp  p9_bindings_bridge.hpp  shell_bridge.hpp  vmad_cluster_bridge.hpp
include/nt_compat/: 8514alog.h  NT_SOURCE_REGISTRY.md  NtDdFt.h  NtIfs.h  NtIoLogc.h  PbProcs.h  TOK162sw.h  access.h  afd.h  alertmsg.h  alphaops.h  bind.h  bugcodes.h  common.h  ctemacro.h  dac.h  dderror.h  debug.h  decdirda.h  devioctl.h  dfsfsctl.h  dfsmrshl.h  dfsprocs.h  dhcpinfo.h  dlc.h  dlcapi.h  dlcdef.h  dlcext.h  dlcio.h  dlctyp.h  dumpsup.c  elnkhw.h  elnksw.h  fsm.h  ftk_defs.h  ftk_extr.h  ftk_intr.h  ftk_tab.h  gluon.h  halp.h  (+183 more)
include/nt_compat/crt/: excpt.h  stdarg.h
include/nt_compat/sys/: stropts.h
opencog_workbench/: __init__.py  workbench.py
opencog_workbench/agents/: __init__.py  cognitive_agent.py  coordination_agent.py  learning_agent.py  reasoning_agent.py
opencog_workbench/config/: __init__.py  config_manager.py
opencog_workbench/core/: __init__.py  atomspace.py  orchestrator.py  reasoning.py  visualization.py
opencog_workbench/gnn/: __init__.py  gnn_layers.py  graph_network.py  node_embeddings.py
opencog_workbench/hypervisor/: __init__.py  agent_zero.py  resource_allocator.py  vm_manager.py
opencog_workbench/nt4_bridge/: __init__.py  kernel_bridge.py  memory_manager.py  nt4_source_analyzer.py  process_manager.py
private/inc/: alpha.h  ntddvdm.h  vdm.h
private/ntos/boot/detect/i386/: ntmisc.h
private/ntos/boot/startup/i386/: ntmisc.h
private/ntos/inc/: ex.h  fsrtl.h  heap.h  ke.h  ntosdef.h  video.h
private/ntos/tdi/nbf/: nbf.h  precomp.h
private/ntos/video/mga/: g3dstd.h
src/cli/: main.cpp
src/core/: agios_system.cpp  atenspace_bridge.cpp  cog0_capi.cpp  cog0_orchestrator.cpp  cognitive_engine.cpp  nt_kernel_bridge.cpp  unified_atomspace.cpp
src/nt_compat/: nt_stubs.c
tests/: __init__.py  conftest.py  test_atomspace.py  test_config.py  test_gnn.py  test_hypervisor.py  test_main.cpp  test_nt4_bridge.py  test_nt_compat.c  test_orchestrator.py  test_reasoning.py  test_workbench.py
